# vnkey

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  macOS_Build.md  version.json
.github/workflows/: homebrew.yml  macos.yml  release-macos.yml  static.yml
Sources/: .env.example  README.md  package-lock.json  package.json  print_dict.rs
Sources/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Sources/src-tauri/capabilities/: default.json
Sources/src-tauri/engine/: ConvertTool.cpp  ConvertTool.h  DataType.h  Engine.cpp  Engine.h  EnglishDictionary.cpp  EnglishDictionary.h  Macro.cpp  Macro.h  ProgrammingFSM.cpp  ProgrammingFSM.h  SmartSwitchKey.cpp  SmartSwitchKey.h  StringUtil.h  Vietnamese.cpp  Vietnamese.h
Sources/src-tauri/src/: db.rs  engine.rs  engine_wrapper.cpp  google_sync.rs  lib.rs  linux_apps.rs  main.rs  tauri_event_tap.mm  win_apps.rs
Tests/: EngineCorpusTest.cpp  README.md  run_engine_corpus_test.sh
Web/: auth.html  index.html  r2_guide.html  style.css
scripts/: README.md  build_all.sh  build_linux.sh  build_macos.sh  build_windows.bat
vnkey-daemon/: Cargo.toml
vnkey-daemon/src/: main.rs
vnkey-daemon/src/platform/: macos.rs  mod.rs  windows.rs
vnkey-engine/: Cargo.toml
vnkey-engine/corpus/: corpus1.txt  corpus10.txt  corpus4.txt  corpus5.txt  corpus6.txt  corpus7.txt  corpus8.txt  corpus9.txt
vnkey-engine/src/: lib.rs  spelling.rs  telex.rs  tone.rs  vni.rs
vnkey-engine/tests/: engine_tests.rs
vnkey-ui/: index.html  package-lock.json  package.json
vnkey-ui/public/: app.icns
vnkey-ui/src-tauri/: Cargo.toml  (+1 more)
(+17 files in other folders)
